<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sortby_bottomsheet"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/divider_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            style="@style/txt_toolbar"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/txt_sortBy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb1"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_nameA2Z"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb2"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_nameZ2A"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb3"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_date_new"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb4"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_date_old"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb5"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_duration_short"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb6"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_duration_long"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb7"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_size_small"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

                <RadioButton
                    android:id="@+id/rb8"
                    style="@style/txt_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:buttonTint="@color/radio_tint"
                    android:layoutDirection="rtl"
                    android:text="@string/txt_sort_by_size_large"
                    android:textAlignment="textStart"
                    android:textColor="@color/radio_tint" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>