<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_topCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_delete"
                    style="@style/checkBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/cb_selector"
                    android:buttonTint="@color/checkbox_tint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_done"
                    style="@style/txt_title"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="right|center_vertical"
                    android:text="@string/txt_DONE"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dataInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/et_white_rectangle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/circularProgressbar"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_minus10sdp"
                        android:gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/circular"
                        android:secondaryProgress="100" />

                    <TextView
                        android:id="@+id/tv"
                        style="@style/txt_titleMsg"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/blackDark" />

                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_countMsg"
                    style="@style/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:textColor="@color/blackLight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight=".3"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_cancel"
                    style="@style/txt_title"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="right|center_vertical"
                    android:text="@string/txt_cancel"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_topListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/_minus5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_sort"
                    style="@style/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:drawableRight="@drawable/ic_dropdown"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/blackLight"
                    android:gravity="center_vertical"
                    android:text="@string/txt_sort_by_nameA2Z"
                    android:textColor="@color/blackLight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight=".4"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewSearch"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_search"
                    android:tint="@color/blackLight"
                    app:tint="@color/blackLight" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:clipToPadding="false"
                android:divider="@null"
                android:paddingBottom="@dimen/_50sdp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_noData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_100sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/txt_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_no_songs_msg"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txt_titleMsg"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_tab_the"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txt_titleMsg"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_plus"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txt_titleMsg"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_plus_msg"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCopy"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_copy"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_copy"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMove"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_move"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_move"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_delete"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_delete"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>