<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_minus5sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_back" />

            <com.app.videoplayer.utils.CustomEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/et_white_selector"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/txt_search"
                android:imeOptions="actionDone"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blackDark"
                android:textColorHint="@color/blackLight"
                android:textFontWeight="400"
                android:textSize="@dimen/_12ssp">

                <requestFocus />
            </com.app.videoplayer.utils.CustomEditText>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_topCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_delete"
                            style="@style/checkBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/cb_selector"
                            android:buttonTint="@color/checkbox_tint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_done"
                            style="@style/txt_title"
                            android:layout_gravity="right|center_vertical"
                            android:gravity="right|center_vertical"
                            android:text="@string/txt_DONE"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:paddingBottom="@dimen/_50sdp"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_no_data"
                    style="@style/txt_title"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:singleLine="false"
                    android:text="@string/txt_no_results"
                    android:textColor="@color/blackLight"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCopy"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_copy"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_copy"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMove"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_move"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_move"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom|center"
            android:singleLine="true"
            android:text="@string/txt_delete"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackMedium"
            android:textFontWeight="600"
            android:textSize="@dimen/_10ssp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_delete"
            app:iconGravity="top"
            app:iconTint="@color/blackMedium" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:gravity="bottom|end"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_move"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>